src/gui/platform/wasm/qlocalfileapi_p.h
@@ -36,12 +36,12 @@ public:
 
                 ~Extension();
 
-                emscripten::val asVal() const;
+                const QStringView &value() const { return m_value; }
 
             private:
                 explicit Extension(QStringView extension);
 
-                emscripten::val m_storage;
+                QStringView m_value;
             };
 
             MimeType();
@@ -49,37 +49,39 @@ public:
 
             void addExtension(Extension type);
 
-            emscripten::val asVal() const;
-
+            const std::vector<Extension> &extensions() const { return m_extensions; }
         private:
-            emscripten::val m_storage;
+            std::vector<Extension> m_extensions;
         };
 
         static std::optional<Accept> fromQt(QStringView type);
 
         ~Accept();
 
-        void addMimeType(MimeType mimeType);
+        void setMimeType(MimeType mimeType);
 
-        emscripten::val asVal() const;
+        const MimeType &mimeType() const { return m_mimeType; }
 
     private:
         Accept();
-        emscripten::val m_storage;
+        MimeType m_mimeType;
     };
 
     Type(QStringView description, std::optional<Accept> accept);
     ~Type();
 
     static std::optional<Type> fromQt(QStringView type);
-    emscripten::val asVal() const;
+    const QStringView &description() const { return m_description; }
+    const std::optional<Accept> &accept() const { return m_accept; }
 
 private:
-    emscripten::val m_storage;
+    QStringView m_description;
+    std::optional<Accept> m_accept;
 };
 
 Q_CORE_EXPORT emscripten::val makeOpenFileOptions(const QStringList &filterList, bool acceptMultiple);
 Q_CORE_EXPORT emscripten::val makeSaveFileOptions(const QStringList &filterList, const std::string& suggestedName);
+Q_CORE_EXPORT std::string makeFileInputAccept(const QStringList &filterList);
 
 }  // namespace LocalFileApi
 QT_END_NAMESPACE
